<resources>
    <string name="app_name">uMusic</string>
    <string name="app_code_name">TurnUpTheMusic</string>
    <string name="app_version">1.0.3.0</string>

    <!-- Song Properties [START] -->
    <string name="song_artist">Artist</string>
    <string name="song_title">Music</string>
    <string name="song_album">Album</string>
    <string name="song_comment">Comment</string>
    <string name="song_compilation">Compilation</string>
    <string name="song_composer">Composer</string>
    <string name="song_composer2">Composer2</string>
    <string name="song_duration">Duration</string>
    <string name="song_featuring_list">Featuring List</string>
    <string name="song_genre">Genre</string>
    <string name="song_producer">Producer</string>
    <string name="song_producer_artist">Producer Artist</string>
    <string name="song_track_number">Track Number</string>
    <string name="song_year">Year</string>
    <!-- Song Properties [END] -->


    <!-- Dashboard Activity -->
    <string name="dashboard_title">Dashboard</string>
    <string name="music_player">Music Player</string>
    <string name="search_artist">Search Artist</string>
    <string name="search_lyrics">Search Lyrics</string>
    <string name="about">About</string>

    <!-- About Activity -->
    <string name="about_title">About</string>
    <string name="app_description">The app is made for music lovers. It makes your life easier when searching for an artist\'s biography, which groups he passed, his releases, from promo singles to full albums, musics\' lyrics and so on. It is, basic and essentially, an explorer of the Music Universe. You are in, then enjoy and make good use of it!</string>
    <string name="developed_by_title">Developer Name</string>
    <string name="developer_name">Guilherme Ventura</string>
    <string name="developer_email">guilhermeventura2@gmail.com</string>
    <string name="app_version_title">App Version</string>
    <string name="rate_app">Rate App</string>
    <string name="send_email">Email me with a feature idea, bug report, or anything you want to write</string>
    <!-- Email -->
    <string name="email_subject">Subject (Feature, Bug, Compliment or other)</string>

    <!-- Artists List Activity -->
    <string name="title_activity_artists_list">Artists Search</string>

    <!-- Artist Viewer Activity -->
    <string name="title_activity_artist_viewer">Artist Information</string>
    <string name="external_urls">External URLs</string>
    <string name="band_members">Band Members</string>
    <string name="groups">Groups</string>
    <string name="no_biography">This artist has no Bio.</string>
    <string name="real_name">Real Name</string>
    <string name="aliases">Aliases</string>
    <string name="biography">Biography</string>
    <string name="discogs_view_artist_profile">View artist profile on Discogs</string>
    <string name="discogs_view_artist_releases">View artist\'s releases</string>
    <string name="show_artist_gallery">Show Gallery</string>
    <!-- Artist image download -->
    <string name="image_already_being_downloaded">The image is already being downloaded. When it is finished, try again.</string>
    <string name="image_not_possible_to_download">It wasn\'t possible to bring your photo. Please try again later.</string>
    <string name="image_saved">Image saved at %1$s.</string>
    <string name="menu_download_artist_image">Download artist image</string>

    <!-- Releases Viewer Activity [START] -->
    <string name="title_activity_releases_viewer">Releases</string>
    <string name="show_info_btn">Show Info</string>
    <!-- Releases Viewer Activity [END] -->
    
    <!-- Release/Master -->    
    <string name="notes">Notes</string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="tracks">Tracks</string>
    
    <!-- Release Viewer Activity [START] -->
    <string name="title_activity_release_viewer">Release Info</string>
    <!-- Releases Viewer Activity [END] -->
    
    <!-- Release Viewer Activity [START] -->
    <string name="title_activity_master_viewer">Master Info</string>
    <!-- Releases Viewer Activity [END] -->


    <!-- Music Info Activity [START] -->
    <string name="title_activity_music_info">Music Information</string>
    <string name="btn_save_file">Save File</string>
    <string name="menu_find_lyrics">Find Lyrics</string>
    <string name="menu_view_artist_info">View Artist Information</string>
    <string name="menu_view_artist_info_condensed">Artist Info</string>
    <!-- Music Info Activity [END] -->


    <!-- Bind Lyrics Activity [START] -->
    <string name="title_activity_bind_lyrics">Bind Lyrics</string>
    <string name="btn_lyrics_is_ok">That\'s it!</string>
    <string name="btn_edit_lyrics">I want to edit before</string>
    <!-- Bind Lyrics Activity [END] -->


    <!-- External URLs [START] -->
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="youtube">Youtube</string>
    <string name="googleplus">Google+</string>
    <string name="tumblr">Tumblr</string>
    <string name="vimeo">Vimeo</string>
    <string name="myspace">MySpace</string>
    <string name="own_website">Own website</string>
    <string name="other_website">Other</string>
    <!-- External URLs [END] -->


    <!-- Messages -->
    <string name="message_no_internet_connection">No internet connection.</string>
    <string name="message_lazy_internet_connection">Your connection is lazy! Try again?</string>
    <string name="message_fetching_lyrics_list">Retrieving lyrics, please wait.</string>
    <string name="message_fetching_lyrics">Bringing the lyric\'s text. It may take awhile.</string>
    <string name="message_lyric_not_found">Sorry, lyric not found.</string>
    <string name="message_fetching_artists_list">Retrieving matching artists, please wait.</string>
    <string name="message_artist_not_found">Sorry, artist not found.</string>
    <string name="message_lyrics_saved">Lyrics saved.</string>
    <string name="message_music_metadata_not_found">The music you are trying to load has no metadata.</string>
    <string name="message_file_not_supported">Sorry, file not supported.</string>
    <string name="loading">Loading…</string>
    <string name="message_coming_soon">Coming soon…</string>

    <!-- Error Messages -->
    <string name="error_bringing_release_info">There was an error when bringing the release\'s info.</string>
    
    <!-- Lyrics providers -->
    <string name="provider_terra_name">Terra Letras</string>
    <string name="provider_terra_url">http://letras.mus.br/winamp.php?artista=%1$s%26musica=%2$s</string>
    <string name="provider_lyrster_name">Lyrster</string>
    <string name="provider_lyrster_url">http://www.lyrster.com/lyrics/%2$s-lyrics-%1$s.html</string>
    <string name="provider_azlyrics_name">A-Z Lyrics Universe</string>
    <string name="provider_azlyrics_url">http://www.azlyrics.com/lyrics/%1$s/%2$s.html</string>

    <!-- Releases Viewer [START] -->
    <string name="message_fetching_releases_title">Fetching artist\'s releases…</string>
    <string name="message_fetching_releases_body">Searching for the artist\'s release, please wait.</string>
    <!-- Releases Viewer [END] -->


    <!-- Lyrics Viewer [START] -->
    <string name="title_activity_lyrics_viewer">Lyrics List</string>
    <string name="btn_select_lyric">Select</string>
    <string name="menu_set_music_tags">Set file tags</string>
    <!-- Lyrics Viewer [END] -->


    <!-- Discogs [START] -->
    <string name="discogs_url_search" formatted="false">/database/search?q=%2$s%26type=%1$s</string>
    <string name="discogs_url_artists" formatted="false">/artists/%1$s</string>
    <string name="discogs_url_releases" formatted="false">/artists/%1$s/releases</string>
    <string name="discogs_url_tracks_releases" formatted="false">/releases/%1$s</string>
    <string name="discogs_url_tracks_masters" formatted="false">/masters/%1$s</string>
    <!-- Discogs [END] -->


    <!-- LyrDB [START] -->
    <string name="lyrdb_url_base" formatted="false">http://webservices.lyrdb.com</string>
    <string name="lyrdb_url_search" formatted="false">/lookup.php?q=%1$s%26for=%2$s</string>
    <string name="lyrdb_url_lyrics" formatted="false">/getlyr.php?q=%1$s</string>
    <!-- LyrDB [END] -->

    <string-array name="external_urls_context_menu_items">
        <item name="copy">@android:string/copyUrl</item>
    </string-array>

</resources>