<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ventura.umusic"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical" >

    <include
        android:id="@+id/loadingArtistInfoProgressBar"
        layout="@layout/loading" />

    <LinearLayout
        android:id="@+id/artist_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:id="@+id/scroll_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Gallery
                    android:id="@+id/artist_images_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
                
                <Button android:id="@+id/btn_show_artist_gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_artist_gallery"/>

                <TextView style="@style/scroll_divider" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical" >

                    <ImageView
                        android:id="@+id/artist_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:contentDescription="@string/song_artist"
                        android:scaleType="fitXY"
                        android:src="@drawable/no_image" />

                    <ProgressBar
                        android:id="@android:id/progress"
                        style="@android:style/Widget.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:indeterminate="true" />
                </FrameLayout>

                <com.ventura.umusic.ui.widget.ButtonGroup
                    android:id="@+id/profile_and_releases_buttons_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_open_artist_discogs_profile"
                        style="@style/list_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:onClick="onOpenProfileButtonClicked"
                        android:text="@string/discogs_view_artist_profile"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_open_artist_releases"
                        style="@style/list_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:onClick="onOpenReleasesButtonClicked"
                        android:text="@string/discogs_view_artist_releases" />
                </com.ventura.umusic.ui.widget.ButtonGroup>

                <com.ventura.umusic.ui.widget.ButtonGroup
                    android:id="@+id/members_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:groupTitle="@string/band_members" >
                </com.ventura.umusic.ui.widget.ButtonGroup>

                <com.ventura.umusic.ui.widget.ButtonGroup
                    android:id="@+id/external_urls_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:groupTitle="@string/external_urls" >
                </com.ventura.umusic.ui.widget.ButtonGroup>

                <com.ventura.umusic.ui.widget.KeyValuePanel_
                    android:id="@+id/real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.ventura.umusic.ui.widget.KeyValuePanel_
                    android:id="@+id/aliases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    style="@style/CategoryTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biography" />

                <TextView
                    android:id="@+id/artist_bio"
                    style="@style/text.small"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>