<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ventura.umusic"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/loadingReleaseInfoProgressBar"
        layout="@layout/loading" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/release_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/no_image" />

            <com.ventura.umusic.ui.widget.ButtonGroup
                android:id="@+id/artists_button_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:groupTitle="Artists" >
            </com.ventura.umusic.ui.widget.ButtonGroup>

            <com.ventura.umusic.ui.widget.ButtonGroup
                android:id="@+id/extra_artists_button_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:groupTitle="Extra Artists" >
            </com.ventura.umusic.ui.widget.ButtonGroup>

            <TextView
                style="@style/CategoryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/notes"
                style="@style/NormalText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.ventura.umusic.ui.widget.KeyValuePanel_
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:keyText="@string/year" >
                </com.ventura.umusic.ui.widget.KeyValuePanel_>

                <com.ventura.umusic.ui.widget.KeyValuePanel_
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:keyText="@string/country" >
                </com.ventura.umusic.ui.widget.KeyValuePanel_>
            </LinearLayout>

            <TextView
                style="@style/CategoryTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracks" />

            <LinearLayout
                android:id="@+id/tracks_list_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>